Startet på ROFLCopter class

--- a/ROFLCopterSS/MainWindow.xaml
+++ b/ROFLCopterSS/MainWindow.xaml
@@ -11,6 +11,7 @@
         MouseDown="Window_MouseDown"
         KeyDown="Window_KeyDown"
         Loaded="Window_Loaded"
+        gif:ImageBehavior.AnimateInDesignMode="True"
         >
     <Grid x:Name="MainGrid">
         <Image x:Name="Roflcopter" gif:ImageBehavior.AnimatedSource="roflinvert.gif" Stretch="None"/>
