--- a/ROFLCopterSS/SettingsWindow.xaml
+++ b/ROFLCopterSS/SettingsWindow.xaml
@@ -5,9 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ROFLCopterSS"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="450" Width="800">
-    <Grid>
-        <Button Width="80" Height="30" Click="Button_Click">Close</Button>
+        Title="Settings" Height="210.793" Width="269.349" ShowInTaskbar="False" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow">
+    <StackPanel Margin="10">
+        <StackPanel Margin="40,5">
+            <RadioButton x:Name="SpeedSlow" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Slow"/>
+            <RadioButton x:Name="SpeedMedium" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Medium" IsChecked="true"/>
+            <RadioButton x:Name="SpeedFast" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Fast"/>
+        </StackPanel>
+        <CheckBox Margin="40,5" Content="Missile" Click="CheckBox_Click"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_OK" Content="OK"/>
+            <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_Cancel" Content="Cancel"/>
+        </StackPanel>
         
-    </Grid>
+
+    </StackPanel>
 </Window>
