--- a/ROFLCopterSS/SettingsWindow.xaml
+++ b/ROFLCopterSS/SettingsWindow.xaml
@@ -12,7 +12,7 @@
             <RadioButton x:Name="SpeedMedium" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Medium" IsChecked="true"/>
             <RadioButton x:Name="SpeedFast" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Fast"/>
         </StackPanel>
-        <CheckBox Margin="40,5" Content="Missile" Click="CheckBox_Click"/>
+        <CheckBox x:Name="Missile" Margin="40,5" Content="Missile" Click="CheckBox_Click"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_OK" Content="OK"/>
             <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_Cancel" Content="Cancel"/>
