--- a/ROFLCopterSS/Windows/SettingsWindow.xaml
+++ b/ROFLCopterSS/Windows/SettingsWindow.xaml
@@ -5,17 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ROFLCopterSS"
         mc:Ignorable="d"
-        Title="Settings" Height="210.793" Width="269.349" ShowInTaskbar="False" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow">
+        Title="Settings" Height="210.793" Width="269.349" ShowInTaskbar="False" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Background="#FF7A95C3">
     <StackPanel Margin="10">
-        <StackPanel Margin="40,5">
+        <StackPanel Margin="40,10">
             <RadioButton x:Name="SpeedSlow" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Slow"/>
             <RadioButton x:Name="SpeedMedium" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Medium" IsChecked="true"/>
             <RadioButton x:Name="SpeedFast" Margin="0,2" GroupName="Speed" Checked="RadioButton_Checked" Content="Fast"/>
         </StackPanel>
         <CheckBox x:Name="Missile" Margin="40,5" Content="Missile" Click="CheckBox_Click"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_OK" Content="OK"/>
-            <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_Cancel" Content="Cancel"/>
+            <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_OK" Content="OK" Background="#FF649DCD"/>
+            <Button Width="80" Height="25" Margin="10,20,10,20" Click="Button_Click_Cancel" Content="Cancel" Background="#FF649DCD"/>
         </StackPanel>
         
 
